revert: 尝试通过避免string concatenation优化性能